--- a/arartekomaps/templates/search.html
+++ b/arartekomaps/templates/search.html
@@ -139,13 +139,13 @@
    {% endfor %}    
   </ul>
   
- {% if thispage.has_previous %}
+<!--  {% if thispage.has_previous %}
  <a href="{{prev_url}}">{% trans "Previous" %}</a>
   {% endif %}
   
   {% if thispage.has_next %}
  <a href="{{next_url}}">{% trans "Next" %}</a>
-  {% endif %}
+  {% endif %} -->
 </div>
 <!-- locacol1 end -->
 
