--- a/arartekomaps/templates/search.html
+++ b/arartekomaps/templates/search.html
@@ -25,7 +25,7 @@
                 }
         );
     var infowindow = new google.maps.InfoWindow();
-    {% for place in places %}{% if place.lat %}    
+    {% for place in pins %}{% if place.lat %}    
         var center = new google.maps.LatLng({{place.lat}}, {{place.lon}});
         bounds.extend(center);
         var image = '{{STATIC_URL}}icn/{% firstof place.icon "city" %}.png';        
@@ -123,7 +123,6 @@
 <p>{% trans "Total results:" %} {{results_number}}</p>
 
   <ul class="itemlist">
-  {% autopaginate umapusers 10 %}
   {% for place in places %}
     <li>
     <img src="{{STATIC_URL}}icn/{% firstof place.icon "city" %}.png" alt="{% if place.category %}{% trans place.category.str2trans %}{% else %}{{ place.name }}{% endif %}" class="mainicon" />
@@ -139,15 +138,14 @@
     </li>
    {% endfor %}    
   </ul>
-  {% paginate %}
   
-<!--  {% if thispage.has_previous %}
+ {% if thispage.has_previous %}
  <a href="{{prev_url}}">{% trans "Previous" %}</a>
   {% endif %}
   
   {% if thispage.has_next %}
  <a href="{{next_url}}">{% trans "Next" %}</a>
-  {% endif %} -->
+  {% endif %}
 </div>
 <!-- locacol1 end -->
 
