--- a/arartekomaps/templates/place.html
+++ b/arartekomaps/templates/place.html
@@ -68,7 +68,7 @@
 <h1 itemprop="name">{{place.name}}</h1>
 
 {% if request.user.is_staff %}
-<a href="{% url 'admin' places_place_change place.id %}">Modificar este lugar</a>
+<a href="{% url 'admin:places_place_change' place.id %}">Modificar este lugar</a>
 {% endif %}
 
 <p class="category_name">{{place.category}}</p>
