Added access description to API and corrected bug in description template

--- a/arartekomaps/templates/place.html
+++ b/arartekomaps/templates/place.html
@@ -106,7 +106,7 @@
 </span>
 </address>
 
-<p>{{place.description|linebreaks|default_if_none:""|safe}}</p>
+<p>{{place.description|default_if_none:""|linebreaks|safe}}</p>
 
 <div id="access">
 <h3>{% trans "Accessibility" %}</h3>
