Added new source: themselves

--- a/arartekomaps/templates/dummy_texts.html
+++ b/arartekomaps/templates/dummy_texts.html
@@ -19,10 +19,10 @@ Servicios bibliotecas
 {% trans "internet_usuarios" %}
 {% trans "prestamo_inter" %}
 {% trans "bol_novedades" %}
-{% trans "selectiva" %} 
-{% trans "infantil" %} 
-{% trans "seccion_local" %} 
-{% trans "comiteca" %} 
+{% trans "selectiva" %}
+{% trans "infantil" %}
+{% trans "seccion_local" %}
+{% trans "comiteca" %}
 {% trans "fondo_antiguo" %}
 {% trans "formacion" %}
 {% trans "sala_estudio" %}
@@ -31,10 +31,10 @@ Servicios bibliotecas
 {% trans "publicaciones" %}
 {% trans "audicion" %}
 
-{% trans "mediateca" %} 
-{% trans "lectura_facil" %} 
-{% trans "seccion_xl" %} 
-{% trans "audiolibros" %} 
+{% trans "mediateca" %}
+{% trans "lectura_facil" %}
+{% trans "seccion_xl" %}
+{% trans "audiolibros" %}
 
 {% trans "general" %}
 {% trans "euskalkultura" %}
@@ -86,4 +86,5 @@ Fuentes de datos
 {% trans "once" %}
 {% trans "fevapas" %}
 {% trans "elkartu" %}
+{% trans "propio" %}
 
