--- a/arartekomaps/templates/base.html
+++ b/arartekomaps/templates/base.html
@@ -1,4 +1,5 @@
-<!doctype html>{% load i18n %}
+{% load i18n %}
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -39,25 +40,9 @@
           <a href="{% url 'set_lang' %}?language={{code}}&amp;next={{request.path}}">{{lang}}</a>
        {% endif %}
      {% endfor %}    
-<!--         <a href="{% url 'set_lang' %}?language=es&next={{request.path}}">Español</a> -->
-      
-      {% comment %}
 
-      <form method="get" action="/search/" id="bigsf">
-        <label for="q">Nora joan:</label> <input type="text" name="q" id="q" value="" />
-        <input type="submit" value="Bilatu" class="searchbutton" />
-        <p><a href="/filter/">Filtro aurreratua</a></p>
-      </form>
-
-      {% endcomment %}
 
       {% if not hidesearch %}
-          <!-- <form method="get" action="/search/">
-            <label for="q">{% trans "Go to..." %}</label>
-            <input type="text" name="q" id="q" value="" />
-            <input type="submit" value="{% trans "Search" %}" class="hsearchbutton" />
-          </form> -->
-
           <form method="get" action="{% url 'gsearch' %}">
               <input type="hidden" name="cx" value="002318387713884704423:4pwcgf1wug4" />
               <label for="q">{% trans "Go to..." %}</label> <input id="q" name="q" type="text" />
