Fullrelease bug commit

--- a/arartekomaps/templates/places/new_place.html
+++ b/arartekomaps/templates/places/new_place.html
@@ -128,17 +128,17 @@
       </tr>
       <tr>
         <td><label for="{{form.url_name_eu.id_for_label}}">{{form.url_name_eu.label}}</label> {{form.url_name_eu}}
-            <input type="text" placeholder="{{form.url_eu.help_text}}" value="{{form.url_eu.value|default:''}}" />
+            <input type="text" placeholder="{{form.url_eu.help_text}}" name="{{form.url_eu.name}}" value="{{form.url_eu.value|default:''}}" />
         <br/><span class="helptext" for="{{form.url_name_eu.id_for_label}}">{{form.url_name_eu.help_text}}</span></td>
       </tr>
       <tr>
         <td><label for="{{form.url_name_es.id_for_label}}">{{form.url_name_es.label}}</label> {{form.url_name_es}}
-            <input type="text" placeholder="{{form.url_es.help_text}}" value="{{form.url_es.value|default:''}}" />
+            <input type="text" placeholder="{{form.url_es.help_text}}" name="{{form.url_es.name}}" value="{{form.url_es.value|default:''}}" />
         <br/><span class="helptext" for="{{form.url_name_es.id_for_label}}">{{form.url_name_es.help_text}}</span></td>
       </tr>
       <tr>
         <td><label for="{{form.url_name_en.id_for_label}}">{{form.url_name_en.label}}</label> {{form.url_name_en}}
-            <input type="text" placeholder="{{form.url_en.help_text}}" value="{{form.url_en.value|default:''}}" />
+            <input type="text" placeholder="{{form.url_en.help_text}}" name="{{form.url_en.name}}" value="{{form.url_en.value|default:''}}" />
         <br/><span class="helptext" for="{{form.url_name_en.id_for_label}}">{{form.url_name_en.help_text}}</span></td>
       </tr>
       <tr>
