--- a/arartekomaps/templates/registration/login.html
+++ b/arartekomaps/templates/registration/login.html
@@ -12,8 +12,8 @@
 
 <h2>{% trans "Sign in using Facebook or Twitter" %}</h2>
 <p>
-<a rel="nofollow" href="{% url 'socialauth_begin' "twitter" %}{% if next %}?next={{next}}{% endif %}"><img src="{{STATIC_URL}}img/tw_login.png" alt="Twitter icon" /></a>
-<a rel="nofollow" href="{% url 'socialauth_begin' "facebook" %}{% if next %}?next={{next}}{% endif %}"><img src="{{STATIC_URL}}img/fb_login.png" alt="Facebook icon" /></a>
+<a rel="nofollow" href="{% url 'socialauth_begin' "twitter" %}{% if next %}?next={{next}}{% endif %}"><img src="{{STATIC_URL}}img/twitter_login.jpg" alt="Twitter icon" /></a>
+<a rel="nofollow" href="{% url 'socialauth_begin' "facebook" %}{% if next %}?next={{next}}{% endif %}"><img src="{{STATIC_URL}}img/facebook_login.jpg" alt="Facebook icon" /></a>
 </p>
 <p>{% trans "You can use your Facebook or Twitter accounts to log in" %}</p>
 
