Templates renamed according to django-register-redux

--- a/arartekomaps/templates/registration/login.html
+++ b/arartekomaps/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "registration/base.html" %}
+{% extends "registration/registration_base.html" %}
 {% load i18n %}
 {% block cscontent %}
 {% if user.is_authenticated %}
